feature/inssue-template-set-up: 이슈 템플릿 추가 및 워크플로우 수정

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -16,6 +16,11 @@ jobs:
       - run: ./gradlew clean build -x test
 
   review:
-    uses: coderabbitai/coderabbit-action@v2
-    with:
-      github_token: ${{ secrets.GITHUB_TOKEN }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run CodeRabbit review
+        uses: coderabbitai/coderabbit-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
