chore/#8: 도커 및 yml 기본값 복원 및 오류 문제 수정

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,8 +14,8 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       TZ: Asia/Seoul
     volumes:
-      - ./docker/mysql/data:/var/lib/mysql
-      - ./docker/mysql/init:/docker-entrypoint-initdb.d
+      - ./mysql/data:/var/lib/mysql
+      - ./mysql/init:/docker-entrypoint-initdb.d
     networks:
       - safetygps-network
 
