--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -4,23 +4,30 @@ on:
   pull_request:
     branches: [ "develop", "main" ]
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-      - run: ./gradlew clean build -x test
+
+      - name: Build (skip tests)
+        run: ./gradlew clean build -x test
 
   review:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Run CodeRabbit review
-        uses: coderabbitai/coderabbit-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run CodeRabbit AI Review
+        uses: coderabbitai/coderabbit@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
